# yarmtl

./: .gitignore  .yarmtl_settings  Cargo.toml  LICENSE  README.md  default.nix  email_config.toml  flake.nix  install.sh  readme.md  result  tasks.md
src/: main.rs  sync_metadata.rs  todoist_auth.rs  todoist_client.rs  todoist_sync.rs  todoist_types.rs  tui.rs
